--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "babel": "^6.23.0",
+    "js-file-download": "^0.4.12",
     "jss": "^10.9.2",
     "jss-rtl": "^0.3.0",
     "react": "^18.2.0",
