--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "base64url": "^3.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "exceljs": "^4.3.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.17.0",
     "file-saver": "^2.0.5",
     "formidable": "^1.2.2",
