--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_URL = 'methaq-family.com:5000'
-# REACT_APP_URL = 'localhost:5000'
+# REACT_APP_URL = 'methaq-family.com:5000'
+REACT_APP_URL = 'localhost:5000'
