--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "js-file-download": "^0.4.12",
     "jss": "^10.9.2",
     "jss-rtl": "^0.3.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
